BEEBEEP (Secure Lan Messanger) - CHANGELOG - (c) Marco Mastroddi

BeeBEEP 5.2.1
- Prevent "user collision" and "connection closed bug"


BeeBEEP 5.2.0
- Added "Create message" window to send one time message to many
- Added default multicast group address 239.255.64.75
- Added option "Use default multicast group address"
- Added option "Show users on connection"

BeeBEEP 5.0.2
- Fixed compatibility of window geometry and state with previous version
- Fixed minor bug in save settings
- Added option "Save window's geometry" on close 

BeeBEEP 5.0.1
- Added "DisableSystemProxyForConnections" option

BeeBEEP 5.0.0
- [SECURITY UPDATE] Encryption level 3 using key generated by SHA3-256 algorithm
- Desktop Sharing (beta)
- Send screenshot from chat
- Simplified GUI of "Configure network..." option
- Hive protocol can be used to contact user who remains offline
- Added delay on first connection option
- Option to send offline messages also in chat with all user
- ShareBox is improved with remote folder creation
- Image transferred can be also opened with a double click in preview
- Option to show usernames in chat with colors or not
- "User has read message" is now available as tootip on the user list of the chat (on mouse hover)
- Updated to Qt 5.9.6

BeeBEEP 4.0.0
- Changed all the main user interface
- All the main options are now grouped in the Settings menu
- Added status description option in user list
- Added status tooltip on the user's avatar/icon
- Added a check and an alert on same nickname/account of the connecting users
- Added "DisablePrivateChats" option on beebeep.rc file
- Added "DisableFileSharing" option on beebeep.rc file
- Chats are now always opened in separate window (single or multi)
- Fixed bug on leave a group chat
- Removed game plugin interface
- Added Workgroups interface in Settings/Users menu
- Users can be also recognized by their hash
- Change local user option added in Settings/OnConnection menu